# rust-cli

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: app.rs  error.rs  lib.rs  main.rs  util.rs
tests/: integration.rs
